--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,10 +23,12 @@ jvmTarget = "17"
 spotless = "6.25.0"
 
 junit = "4.13.2"
+junit5 = "5.11.4"
 mockk = "1.13.16"
 coroutines-test = "1.8.0"
 junit-ext = "1.2.1"
 espresso = "3.6.1"
+robolectric = "4.14.1"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "application" }
@@ -95,8 +97,10 @@ kotlinx-collections-immutable = { module = "org.jetbrains.kotlinx:kotlinx-collec
 
 # Unit Test
 junit = { module = "junit:junit", version.ref = "junit"}
+junit-junit5 = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit5" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk"}
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines-test"}
+robolectric-robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 
 # Android Test
 junit-ext = { module = "androidx.test.ext:junit", version.ref = "junit-ext"}
